kubernetes/apps/storage/garage/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: garage-webui
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Storage
    gethomepage.dev/name: Garage
    gethomepage.dev/icon: mdi-warehouse
    gethomepage.dev/description: S3-compatible object storage
    gethomepage.dev/pod-selector: app.kubernetes.io/name=garage-webui
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "garage.${SECRET_DOMAIN}"
  rules:
    - backendRefs:
        - name: garage-webui
          port: 3909
      matches:
        - path:
            type: PathPrefix
            value: /
